<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vanttec_3d_object</name>
  <version>0.0.0</version>
  <description>Beginner client libraries tutorials practice package</description>
  <maintainer email="ha.ramirezv@outlook.com">Horte</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <build_depend>rclpy</build_depend>
    <exec_depend>rclpy</exec_depend>
    <build_depend>visualization_msgs</build_depend>
    <exec_depend>visualization_msgs</exec_depend>
  </export>
</package>
